# reserva-vaga-apartamento

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  pyproject.toml
app/: config.py  logging_config.py  main.py  middleware.py  models.py  schemas.py
app/routers/: reservations.py
app/services/: icondominio.py  notifier.py  scheduler.py
app/templates/: base.html  detail.html  index.html
docs/: code-standards.md  git-conventions.md  principles.md  testing-strategy.md
tests/: conftest.py  test_icondominio.py  test_init_db.py  test_logging_config.py  test_main.py  test_middleware.py  test_models.py  test_notifier.py  test_routers.py  test_scheduler.py  test_schemas.py
