[tool.poetry]
name = "icond"
version = "0.1.0"
description = "Reserva automática iCondomínio"
authors = ["Paulo Bof"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
jinja2 = "^3.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
aiosqlite = "^0.21"
httpx = "^0.28"
apscheduler = "^3.11"
pydantic-settings = "^2.7"
python-multipart = "^0.0.20"
pytz = "^2024.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
