[tool.poetry]
name = "icond"
version = "0.1.0"
description = "Reserva automática iCondomínio"
authors = ["Paulo Bof"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
jinja2 = "^3.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
aiosqlite = "^0.21"
httpx = "^0.28"
apscheduler = "^3.11"
pydantic-settings = "^2.7"
python-multipart = "^0.0.20"
pytz = "^2024.2"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print
    "RUF",   # ruff-specific
]
ignore = [
    "S101",   # assert usado em testes
    "B008",   # Depends() / Form() em defaults é padrão FastAPI
    "RUF006", # asyncio.create_task sem referência (fire-and-forget intencional)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.5,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "commitizen (>=4.13.9,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
